--- a/.github/workflows/openwrt_packages.yml
+++ b/.github/workflows/openwrt_packages.yml
@@ -1,9 +1,9 @@
 name: "openwrt_packages"
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: 0 */6 * * *
-  workflow_dispatch:         # 支持手动触发
+    - cron: 0 0 * * 6
 
 jobs:
   job_openwrt-packages:
