--- a/.github/workflows/openwrt_packages.yml
+++ b/.github/workflows/openwrt_packages.yml
@@ -6,7 +6,7 @@ on:
     - cron: 0 0 * * 6
 
 jobs:
-  job_openwrt-packages:
+  job_openwrt_packages:
     if: github.event.repository.owner.id == github.event.sender.id || ! github.event.sender.id
     runs-on: ubuntu-latest
 
