--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -21,7 +21,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+          
+      - name: Initialization environment
+        run : |
+          git config --global user.email "OPPEN321@users.noreply.github.com"
+          git config --global user.name "actions-user"
+          sudo timedatectl set-timezone "Asia/Shanghai"
+          echo "DATE_TAG=R$(date +%d%m%y)" >> $GITHUB_ENV
+        
       - name: Build
         uses: kenzok8/gh-action-sdk@main
         env:
@@ -53,4 +60,4 @@ jobs:
           allowUpdates: true
           replacesArtifacts: true
           bodyFile: "release.txt"
-          tag: ${{ github.run_number }}-${{ matrix.arch }}
+          tag: ${{ env.DATE_TAG }}-${{ matrix.arch }}
