--- a/.github/workflows/openwrt-packages.yml
+++ b/.github/workflows/openwrt-packages.yml
@@ -3,7 +3,7 @@ name: Sync QuickWrt Packages
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 0 * * 6
+    - cron: 0 16 * * *
 
 jobs:
   job_openwrt_packages:
