--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         sdk:
-          - 24.10.3
+          - 24.10.4
         arch:
           - aarch64_cortex-a53
           - aarch64_generic
@@ -34,8 +34,7 @@ jobs:
         env:
           ARCH: ${{ matrix.arch }}-${{ matrix.sdk }}
           FEEDNAME: packages_ci
-          PACKAGES: luci-theme-argon luci-theme-kucat luci-app-adguardhome luci-app-ramfree luci-app-quickstart luci-app-quickfile luci-app-partexp luci-app-openlist2 luci-app-netspeedtest luci-app-mosdns luci-app-mentohust luci-app-lucky luci-app-linkease luci-app-kucat-config luci-app-istorex luci-app-istoreenhance luci-app-floatip luci-app-ddnsto luci-app-argon-config luci-app-airplay2 luci-app-airconnect luci-app-socat luci-app-store luci-app-unblockneteasemusic luci-app-unishare luci-app-usb-printer luci-app-webdav luci-app-wolplus luci-lib-iform luci-lib-taskd luci-lib-xterm luci-nginxer lucky mentohust mosdns openlist2 quickfile quickstart speedtest-cli taskd unishare v2dat webdav2 airconnect airplay2 ddnsto floatip istoreenhance linkease linkmount 
-          NO_REFRESH_CHECK: true
+          PACKAGES: luci-app-quickstart quickstart
           IGNORE_ERRORS: true
 
       - name: Artifact packages
