--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -79,7 +79,7 @@ jobs:
           server: ${{ secrets.ftp_address }}
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          server-dir: ${{ matrix.tag }}/${{ matrix.arch }}/
+          server-dir: opkg/${{ matrix.tag }}/${{ matrix.arch }}/
           local-dir: bin/packages/${{ matrix.arch }}/packages_ci/
           dangerous-clean-slate: false
 
